<resources>
    <string name="app_name">飞盘战术板</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">推出</string>
    <string name="nav_close">收起</string>

    <string name="no_anim_hint">请先制作战术！</string>
    <string name="del_frame_success_hint">删除成功!</string>
    <string name="save_success_hint">保存战术成功！</string>
    <string name="save_as_success_hint">另存战术成功！</string>
    <string name="auto_save_as_success_hint">自动保存成功</string>
    <string name="temp_name_string">模板名称</string>
    <string name="free_for_use_hint_string">前排提醒：本应用使用免费</string>
    <string name="weather_to_activate_string">是否启用</string>
    <string name="auto_save_string">自动保存</string>
    <string name="question_mark">？</string>
    <string name="auto_save_cancel_hint">之后可以在“设置”中“取消”或“启用”</string>
    <string name="del_all_temp_hint">确认删除所有模板?</string>
    <string name="act_irreversible_hint">（操作不可逆，请谨慎选择！）</string>
    <string name="del_anim_hint">确认删除战术？</string>
    <string name="play_anim_string">播 放</string>
    <string name="create_new_strategy_string">新建战术</string>
    <string name="load_strategy_string">读取战术</string>
    <string name="insert_frame_string">插入帧</string>
    <string name="del_frame_init_string">删除帧\n(长按)</string>
    <string name="del_frame_string">删除帧</string>
    <string name="save_string">保 存</string>
    <string name="save_as_string">另存战术</string>
    <string name="select_temp_string">选择模板</string>
    <string name="anim_return_string">返回</string>
    <string name="anim_paint_string">绘 制</string>

    <string name="my_temp_string">我的</string>
    <string name="three_men_string">三人</string>
    <string name="five_men_string">五人</string>
    <string name="ver_stack_string">竖排</string>
    <string name="ho_stack_string">横排</string>
    <string name="static_return_string">返回</string>
    <string name="add_player_string">+队员</string>
    <string name="offense_string">O进攻</string>
    <string name="defense_string">D防守</string>
    <string name="static_save_string">保存</string>
    <string name="clear_string">清空</string>
    <string name="static_paint_string">绘制</string>

    <string name="already_saved_strategy_list_string">已保存的战术列表</string>
    <string name="strategy_manage_hint">（单击-重命名，叉号-删除战术）</string>
    <string name="clear_list_string">清空\n列表</string>

    <string name="import_string">导入战术</string>
    <string name="export_string">导出战术</string>
    <string name="share_string">分享</string>
    <string name="share_hint">不推荐微信</string>
    <string name="active_auto_save_string">启用自动保存</string>
    <string name="restore_temp_data_string">恢复初始模板</string>
    <string name="set_canvas_bg_string">设置战术板背景：</string>
    <string name="fast_string">快</string>
    <string name="slow_string">慢</string>
    <string name="anim_speed_hint">拖动进度条 -> 修改动画播放速度</string>
    <string name="temp_sharing_string">模板共享</string>
    <string name="animation_string">战术动画</string>
    <string name="save_and_load_string">读取与修改</string>
    <string name="export_and_sharing_string">导出与分享</string>
    <string name="importing_data_string">导入数据</string>


    <string name="guiding_intro_0">使用方式推荐</string>
    <string name="guiding_intro_01">本应用尤其适用于移动场景的战术交流</string>
    <string name="guiding_intro_02">（例如大巴、火车等交通工具上，或其他未携带实体战术板的场合）</string>
    <string name="guiding_intro_1">推荐使用方式一</string>
    <string name="guiding_intro_10">分享者使用QQ群等通讯软件的“分享屏幕”功能
        \n自由绘画结合口头说明，将战术演示共享给队友</string>
    <string name="guiding_intro_2">推荐使用方式二</string>
    <string name="guiding_intro_20">分享者先使用“导出”打包战术
        \n再使用“分享”功能将打包好的文件传给对方“导入”</string>
    <string name="guiding_intro_21">（由于安卓安全性升级，较新机型的导出功能可能会失效）</string>
    <string name="feedback_free_for_use_hint">本应用使用免费
        \n请审慎对待任意付费获取来源</string>
    <string name="feedback_10">较新机型的导出功能可能会失效</string>
    <string name="feedback_11">严重bug请在B站专栏评论区留言或私信</string>
    <string name="feedback_12">（暂不计划开发新功能）</string>
    <string name="feedback_visit_btn_string">开发者主页👇</string>
    <string name="feedback_visit_homepage">访问B站</string>
    <string name="feedback_support_dev">赞助开发者👉</string>
    <string name="feedback_reference_hint">本应用部分内容参考自 ultiplays
        \n网页版请使用 https://www.ultiplays.com</string>


    <string name="static_board_string">战术板</string>
    <string name="anim_board_string">战术动画</string>
    <string name="manage_tactics_string">管理战术动画</string>
    <string name="settings_string">设置</string>
    <string name="guiding_string">使用指南</string>
    <string name="feedback_string">反馈</string>
    <string name="name_duplication_hint_1">导入的重名战术已添加\"</string>
    <string name="name_duplication_hint_2">\" 后缀</string>
    <string name="auto_save_btn_string">自动保存</string>
    <string name="temps_init_success_hint">战术模板初始化成功</string>
    <string name="exit_check_hint">再按一次退出程序</string>
    <string name="name_duplication_warning">文件已存在，请重命名！</string>
    <string name="export_success_hint">导出成功！</string>
    <string name="export_folder_created_success_hint">导出文件夹创建成功！</string>
    <string name="export_folder_creating_failed_error">创建导出文件夹失败，请使用其他功能！</string>
    <string name="empty_list_warning">请先创建新的战术！</string>
    <string name="save_failure_warning">保存标记错误，出现bug！</string>
    <string name="auto_save_success_hint">自动保存成功</string>
    <string name="tactics_cleared_hint">战术已清空！</string>
    <string name="temp_updated_success_hint">模板修改成功！</string>
    <string name="sharing_file_empty_warning">使用\"分享战术\"前，请先\"导出战术\"</string>
    <string name="importing_success_hint">导入成功</string>
    <string name="data_file_incompatible_error">早期版本数据，文件不兼容！</string>
    <string name="export_folder_existed">导出路径已存在：</string>


    <string name="confirm_string">确认</string>
    <string name="cancel_string">取消</string>
    <string name="unsaved_hint_00">有内容未保存，</string>
    <string name="unsaved_hint_01">确认跳转？</string>
    <string name="unsaved_hint_10">未保存的内容将丢失，</string>
    <string name="activate_string">启用</string>
    <string name="delete_success_hint">删除成功！</string>
    <string name="old_name_string">（原名）</string>
    <string name="saved_temp_name_string">保存的战术板名称</string>
    <string name="save_name_hint">输入名称，例如：逼边 竖排防守</string>
    <string name="first_launch_hint">主要功能已制作完成</string>
    <string name="temp_init_check">是否初始化模板？</string>
    <string name="temp_init_hint">本操作不会删除已保存的战术</string>
    <string name="temp_init_success_hint">模板初始化完成！</string>


    <string name="disc_full">全场</string>
    <string name="disc_endzone">得分区</string>
    <string name="soccer_full">足-全场</string>
    <string name="soccer_half">足-半场</string>
    <string name="basket_full">篮-全场</string>
    <string name="basket_half">篮-半场</string>
    <string name="feedback_visit_afdian">访问赞助页</string>
    <string name="settings_auto_save_hint">在“另存战术”后\n才会使用</string>
    <string name="exit_string">退出</string>
    <string name="confirm_exit_string">确认退出？</string>
</resources>