<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:id="@+id/head_space"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/import_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="60dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/IO_text_size"
                    android:text="@string/import_string" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/export_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="60dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/IO_text_size"
                    android:text="@string/export_string" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/share_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="60dp"
                        android:backgroundTint="@color/btn_color"
                        android:textColor="@color/Ivory"
                        android:textSize="@dimen/IO_text_size"
                        android:text="@string/share_string" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/share_hint"
                        android:textSize="@dimen/IO_text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <CheckBox
                    android:id="@+id/auto_save_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:minWidth="60dp"
                    android:layout_gravity="center"
                    android:textColor="@color/txt_light_color"
                    android:background="@drawable/highlighted_bg"
                    android:textSize="@dimen/IO_text_size"
                    android:text="@string/active_auto_save_string" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <Button
                    android:id="@+id/init_temp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:minWidth="60dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/btn_bg_highlight_color"
                    android:textSize="@dimen/IO_text_size"
                    android:text="@string/restore_temp_data_string" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|bottom"
                    android:paddingTop="8dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/highlighted_bg"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/set_canvas_bg_string"
                        android:textColor="@color/txt_light_color"
                        android:textSize="18sp" />
                    <Spinner
                        android:id="@+id/canvas_bg_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/spinner_min_height"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_huge"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="15dp"
                    android:textSize="@dimen/IO_text_size"
                    android:layout_weight="0"
                    android:text="@string/fast_string" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <com.google.android.material.slider.Slider
                        android:id="@+id/anim_speed_ctrl_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stepSize="5.0"
                        android:valueFrom="50.0"
                        android:valueTo="150.0" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_huge"
                    android:layout_weight="0"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="15dp"
                    android:textSize="@dimen/IO_text_size"
                    android:text="@string/slow_string" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingVertical="7dp"
                android:paddingHorizontal="14dp"
                android:textSize="@dimen/IO_text_size"
                android:text="@string/anim_speed_hint"
                android:textColor="@color/Ivory"
                android:background="@drawable/rounded_edge_purple" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/lang_setting_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="@dimen/margin_huge"
        android:layout_marginEnd="@dimen/margin_huge"
        tools:ignore="ContentDescription" />
</FrameLayout>